Version 0.6.8     unreleased

	* Pull in latest updates from run-script-framework.

Version 0.6.7     26 Feb 2024

	* Upgrade to Poetry v1.8.0 and make related adjustments.
	* Disable Python keyring via poetry.toml.
	* Update Poetry install instructions in DEVELOPER.md.
	* Pull in latest version of run-script-framework.
	* Upgrade to gha-shared-workflows@v4 with new Poetry setup.
	* Add support for 'run outdated' and update dependencies.
	* Remove mistaken dependency on Poetry itself.

Version 0.6.6     17 Jan 2024

	* Remove GitHub Actions workflow schedule, which broke release process.

Version 0.6.5     17 Jan 2024

	* Update jinja2 to address CVE-2024-22195 from Dependabot.
	* Update dependencies and fix new MyPy warnings.

Version 0.6.4     05 Nov 2023

	* Update urllib3 to address Dependabot warnings.
	* Upgrade to Poetry v1.7.0 for official Python 3.12 support.

Version 0.6.3     15 Oct 2023

	* Upgrade major dependencies.
	* Upgrade build process to Poetry v1.6.1.
	* Add support for Python 3.12.
	* Use pendulum 3.0.0b1 for Python 3.12 only.

Version 0.6.2     07 Jun 2023

	* Upgrade to Poetry v1.5.1 and make related changes.

Version 0.6.1     06 Jun 2023

	* Fix checktabs to be safe for file named '-'.
	* Update requests dependency for CVE-2023-32681.

Version 0.6.0     09 Apr 2023

	* Add new SubscriptionType enumeration.
	* Rewrite request-related tests to use the responses framework.

Version 0.5.4     26 Feb 2023

	* Upgrade all dependencies to the latest major version.
	* Pull Sphinx fields from metadata rather than parsing pyproject.toml.

Version 0.5.3     30 Dec 2022

	* Convert to latest readthedocs.io standard.
	* Add NOTICE file to sdist, alongside existing LICENSE file.
	* Automate the existing manual release process using GitHub Actions.
	* Adjust GHA build to run MacOS and Windows tests only on latest Python.

Version 0.5.2     24 Oct 2022

	* Refactor the run script and pre-commit hooks to reduce duplication.