@@ -57,13 +57,12 @@ docs = [ "importlib-metadata", "sphinx", "sphinx-autoapi" ]
 [tool.poetry.group.dev.dependencies]
 pytest = "^8.0.2"
 pytest-testdox = "^3.0.1"
-coverage = "^6.5.0"  # coveralls needs v6
+coverage = "^7.4.4"
 pylint = "^3.0.3"
 pre-commit = "^3.6.0"
 black = "^24.2.0"
 mypy = "^1.6.0"
 isort = "^5.12.0"
-coveralls = "^3.3.1"
 types-PyYAML = "^6.0.12.12"
 types-requests = "^2.31.0.8"
 colorama = "~0, >=0.4.6"
