@@ -1,6 +1,7 @@
 Version 0.6.8     unreleased
 
 	* Pull in latest updates from run-script-framework.
+	* Simplify GHA integration with coveralls.io.
 
 Version 0.6.7     26 Feb 2024
 
